crates/pgls_pretty_print/tests/snapshots/multi/tests__join_hash_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/join_hash_60.sql
snapshot_kind: text
---
BEGIN;

SET LOCAL min_parallel_table_scan_size = 0;

SET LOCAL parallel_setup_cost = 0;

SET LOCAL enable_hashjoin = on;

CREATE OR REPLACE FUNCTION find_hash(
  "node" JSON
)
RETURNS JSON
LANGUAGE "plpgsql"
AS '
declare
  x json;
  child json;
begin
  if node->>''Node Type'' = ''Hash'' then
    return node;
  else
    for child in select json_array_elements(node->''Plans'')
    loop
      x := find_hash(child);
      if x is not null then
        return x;
      end if;
    end loop;
    return null;
  end if;
end;
';

CREATE OR REPLACE FUNCTION hash_join_batches(
  "query" TEXT
)
RETURNS TABLE (
  "original" INT,
  "final" INT
)
LANGUAGE "plpgsql"
AS '
declare
  whole_plan json;
  hash_node json;
begin
  for whole_plan in
    execute ''explain (analyze, format ''''json'''') '' || query
  loop
    hash_node := find_hash(json_extract_path(whole_plan, ''0'', ''Plan''));
    original := hash_node->>''Original Hash Batches'';
    final := hash_node->>''Hash Batches'';
    return next;
  end loop;
end;
';

CREATE TABLE simple AS
  SELECT
    generate_series(1,
    20000) AS id,
    'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa';

ALTER TABLE simple SET (parallel_workers = 2);

ANALYZE simple;

CREATE TABLE bigger_than_it_looks AS
  SELECT
    generate_series(1,
    20000) AS id,
    'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa';

ALTER TABLE bigger_than_it_looks
  SET (autovacuum_enabled = 'false');

ALTER TABLE bigger_than_it_looks SET (parallel_workers = 2);

ANALYZE bigger_than_it_looks;

UPDATE pg_class
SET reltuples = 1000
WHERE
  relname =
  'bigger_than_it_looks';

CREATE TABLE extremely_skewed ( id INT, t TEXT );

ALTER TABLE extremely_skewed
  SET (autovacuum_enabled = 'false');

ALTER TABLE extremely_skewed SET (parallel_workers = 2);

ANALYZE extremely_skewed;

INSERT INTO extremely_skewed
SELECT
  42 AS id,
  'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa'
FROM
  generate_series(1,
  20000);

UPDATE pg_class
SET reltuples = 2,
relpages = pg_relation_size('extremely_skewed') / 8192
WHERE
  relname =
  'extremely_skewed';

CREATE TABLE wide AS
  SELECT
    generate_series(1,
    2) AS id,
    rpad('',
    320000,
    'x') AS t;

ALTER TABLE wide SET (parallel_workers = 2);

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 0;

SET LOCAL work_mem = '4MB';

SET LOCAL hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join simple s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SET LOCAL work_mem = '4MB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = off;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join simple s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SET LOCAL work_mem = '4MB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = on;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join simple s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 0;

SET LOCAL work_mem = '128kB';

SET LOCAL hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join simple s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SET LOCAL work_mem = '128kB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = off;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join simple s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SET LOCAL work_mem = '192kB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = on;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN simple AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join simple s using (id);
');

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  USING ("id");

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 0;

SET LOCAL work_mem = '128kB';

SET LOCAL hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN bigger_than_it_looks AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN bigger_than_it_looks AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) FROM simple r JOIN bigger_than_it_looks s USING (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SET LOCAL work_mem = '128kB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = off;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN bigger_than_it_looks AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN bigger_than_it_looks AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join bigger_than_it_looks s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 1;

SET LOCAL work_mem = '192kB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = on;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN bigger_than_it_looks AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN bigger_than_it_looks AS s
  USING ("id");

SELECT
  original >
  1 AS initially_multibatch,
  final >
  original AS increased_batches
FROM
  hash_join_batches('
  select count(*) from simple r join bigger_than_it_looks s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 0;

SET LOCAL work_mem = '128kB';

SET LOCAL hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN extremely_skewed AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN extremely_skewed AS s
  USING ("id");

SELECT
  *
FROM
  hash_join_batches('
  select count(*) from simple r join extremely_skewed s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SET LOCAL work_mem = '128kB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = off;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN extremely_skewed AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN extremely_skewed AS s
  USING ("id");

SELECT
  *
FROM
  hash_join_batches('
  select count(*) from simple r join extremely_skewed s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 1;

SET LOCAL work_mem = '128kB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL enable_parallel_hash = on;

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN extremely_skewed AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  INNER JOIN extremely_skewed AS s
  USING ("id");

SELECT
  *
FROM
  hash_join_batches('
  select count(*) from simple r join extremely_skewed s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SET LOCAL work_mem = '4MB';

SET LOCAL hash_mem_multiplier = 1.0;

SET LOCAL parallel_leader_participation = off;

SELECT
  *
FROM
  hash_join_batches('
  select count(*) from simple r join simple s using (id);
');

ROLLBACK TO SAVEPOINT settings;

CREATE TABLE join_foo AS
  SELECT
    generate_series(1,
    3) AS id,
    CAST('xxxxx' AS TEXT) AS t;

ALTER TABLE join_foo SET (parallel_workers = 0);

CREATE TABLE join_bar AS
  SELECT
    generate_series(1,
    10000) AS id,
    CAST('xxxxx' AS TEXT) AS t;

ALTER TABLE join_bar SET (parallel_workers = 2);

SAVEPOINT settings;

SET enable_parallel_hash = off;

SET parallel_leader_participation = off;

SET min_parallel_table_scan_size = 0;

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

SET max_parallel_workers_per_gather = 2;

SET enable_material = off;

SET enable_mergejoin = off;

SET work_mem = '64kB';

SET hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  final >
  1 AS multibatch
FROM
  hash_join_batches('
  select count(*) from join_foo
    left join (select b1.id, b1.t from join_bar b1 join join_bar b2 using (id)) ss
    on join_foo.id < ss.id + 1 and join_foo.id > ss.id - 1;
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET enable_parallel_hash = off;

SET parallel_leader_participation = off;

SET min_parallel_table_scan_size = 0;

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

SET max_parallel_workers_per_gather = 2;

SET enable_material = off;

SET enable_mergejoin = off;

SET work_mem = '4MB';

SET hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  final >
  1 AS multibatch
FROM
  hash_join_batches('
  select count(*) from join_foo
    left join (select b1.id, b1.t from join_bar b1 join join_bar b2 using (id)) ss
    on join_foo.id < ss.id + 1 and join_foo.id > ss.id - 1;
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET enable_parallel_hash = on;

SET parallel_leader_participation = off;

SET min_parallel_table_scan_size = 0;

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

SET max_parallel_workers_per_gather = 2;

SET enable_material = off;

SET enable_mergejoin = off;

SET work_mem = '64kB';

SET hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  final >
  1 AS multibatch
FROM
  hash_join_batches('
  select count(*) from join_foo
    left join (select b1.id, b1.t from join_bar b1 join join_bar b2 using (id)) ss
    on join_foo.id < ss.id + 1 and join_foo.id > ss.id - 1;
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET enable_parallel_hash = on;

SET parallel_leader_participation = off;

SET min_parallel_table_scan_size = 0;

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

SET max_parallel_workers_per_gather = 2;

SET enable_material = off;

SET enable_mergejoin = off;

SET work_mem = '4MB';

SET hash_mem_multiplier = 1.0;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  COUNT(*)
FROM
  join_foo
  LEFT OUTER JOIN (SELECT
    b1.id,
    b1.t
  FROM
    join_bar AS b1
    INNER JOIN join_bar AS b2
    USING ("id")) AS ss
  ON join_foo.id <
    ss.id + 1 AND
    join_foo.id >
    ss.id - 1;

SELECT
  final >
  1 AS multibatch
FROM
  hash_join_batches('
  select count(*) from join_foo
    left join (select b1.id, b1.t from join_bar b1 join join_bar b2 using (id)) ss
    on join_foo.id < ss.id + 1 and join_foo.id > ss.id - 1;
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 0;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  USING ("id");

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET enable_parallel_hash = off;

SET LOCAL max_parallel_workers_per_gather = 2;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  USING ("id");

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  USING ("id");

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  USING ("id");

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 0;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  ON r.id =
    0 - s.id;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  ON r.id =
    0 - s.id;

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET enable_parallel_hash = off;

SET LOCAL max_parallel_workers_per_gather = 2;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  ON r.id =
    0 - s.id;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  ON r.id =
    0 - s.id;

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL max_parallel_workers_per_gather = 2;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  ON r.id =
    0 - s.id;

SELECT
  COUNT(*)
FROM
  simple AS r
  FULL OUTER JOIN simple AS s
  ON r.id =
    0 - s.id;

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET max_parallel_workers_per_gather = 2;

SET enable_parallel_hash = on;

SET work_mem = '128kB';

SET hash_mem_multiplier = 1.0;

SELECT
  length(MAX(s.t))
FROM
  wide
  LEFT OUTER JOIN (SELECT
    id,
    COALESCE(t,
    '') || '' AS t
  FROM
    wide) AS s
  USING ("id");

SELECT
  length(MAX(s.t))
FROM
  wide
  LEFT OUTER JOIN (SELECT
    id,
    COALESCE(t,
    '') || '' AS t
  FROM
    wide) AS s
  USING ("id");

SELECT
  final >
  1 AS multibatch
FROM
  hash_join_batches('
  select length(max(s.t))
  from wide left join (select id, coalesce(t, '''') || '''' as t from wide) s using (id);
');

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET enable_parallel_hash = on;

SET min_parallel_table_scan_size = 0;

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

CREATE TABLE hjtest_matchbits_t1 ( id INT );

CREATE TABLE hjtest_matchbits_t2 ( id INT );

INSERT INTO hjtest_matchbits_t1 VALUES (1);

INSERT INTO hjtest_matchbits_t2 VALUES (2);

UPDATE hjtest_matchbits_t2 SET id = 2;

SELECT
  *
FROM
  hjtest_matchbits_t1 AS t1
  FULL OUTER JOIN hjtest_matchbits_t2 AS t2
  ON t1.id =
    t2.id
ORDER BY t1.id;

RESET parallel_setup_cost;

SET enable_parallel_hash = off;

SELECT
  *
FROM
  hjtest_matchbits_t1 AS t1
  FULL OUTER JOIN hjtest_matchbits_t2 AS t2
  ON t1.id =
    t2.id;

ROLLBACK TO SAVEPOINT settings;

ROLLBACK;

BEGIN;

SET LOCAL enable_sort = off;

SET LOCAL from_collapse_limit = 1;

CREATE TABLE hjtest_1 ( a TEXT, b INT, id INT, c BOOLEAN );

CREATE TABLE hjtest_2 ( a BOOLEAN, id INT, b TEXT, c INT );

INSERT INTO hjtest_1 (a,
b,
id,
c)
VALUES ('text',
2,
1,
FALSE);

INSERT INTO hjtest_1 (a,
b,
id,
c)
VALUES ('text',
1,
2,
FALSE);

INSERT INTO hjtest_1 (a,
b,
id,
c)
VALUES ('text',
20,
1,
FALSE);

INSERT INTO hjtest_1 (a,
b,
id,
c)
VALUES ('text',
1,
1,
FALSE);

INSERT INTO hjtest_2 (a,
id,
b,
c)
VALUES (TRUE,
1,
'another',
2);

INSERT INTO hjtest_2 (a,
id,
b,
c)
VALUES (TRUE,
3,
'another',
7);

INSERT INTO hjtest_2 (a,
id,
b,
c)
VALUES (TRUE,
1,
'another',
90);

INSERT INTO hjtest_2 (a,
id,
b,
c)
VALUES (TRUE,
1,
'another',
3);

INSERT INTO hjtest_2 (a,
id,
b,
c)
VALUES (TRUE,
1,
'text',
1);

SELECT
  hjtest_1.a AS a1,
  hjtest_2.a AS a2,
  CAST(hjtest_1.tableoid AS REGCLASS) AS t1,
  CAST(hjtest_2.tableoid AS REGCLASS) AS t2
FROM
  hjtest_1,
  hjtest_2
WHERE
  hjtest_1.id =
  (SELECT
    1
  WHERE
    hjtest_2.id =
    1) AND
  (SELECT
    hjtest_1.b * 5) =
  (SELECT
    hjtest_2.c * 5) AND
  (SELECT
    hjtest_1.b * 5) <
  50 AND
  (SELECT
    hjtest_2.c * 5) <
  55 AND
  hjtest_1.a <>
  hjtest_2.b;

SELECT
  hjtest_1.a AS a1,
  hjtest_2.a AS a2,
  CAST(hjtest_1.tableoid AS REGCLASS) AS t1,
  CAST(hjtest_2.tableoid AS REGCLASS) AS t2
FROM
  hjtest_1,
  hjtest_2
WHERE
  hjtest_1.id =
  (SELECT
    1
  WHERE
    hjtest_2.id =
    1) AND
  (SELECT
    hjtest_1.b * 5) =
  (SELECT
    hjtest_2.c * 5) AND
  (SELECT
    hjtest_1.b * 5) <
  50 AND
  (SELECT
    hjtest_2.c * 5) <
  55 AND
  hjtest_1.a <>
  hjtest_2.b;

SELECT
  hjtest_1.a AS a1,
  hjtest_2.a AS a2,
  CAST(hjtest_1.tableoid AS REGCLASS) AS t1,
  CAST(hjtest_2.tableoid AS REGCLASS) AS t2
FROM
  hjtest_2,
  hjtest_1
WHERE
  hjtest_1.id =
  (SELECT
    1
  WHERE
    hjtest_2.id =
    1) AND
  (SELECT
    hjtest_1.b * 5) =
  (SELECT
    hjtest_2.c * 5) AND
  (SELECT
    hjtest_1.b * 5) <
  50 AND
  (SELECT
    hjtest_2.c * 5) <
  55 AND
  hjtest_1.a <>
  hjtest_2.b;

SELECT
  hjtest_1.a AS a1,
  hjtest_2.a AS a2,
  CAST(hjtest_1.tableoid AS REGCLASS) AS t1,
  CAST(hjtest_2.tableoid AS REGCLASS) AS t2
FROM
  hjtest_2,
  hjtest_1
WHERE
  hjtest_1.id =
  (SELECT
    1
  WHERE
    hjtest_2.id =
    1) AND
  (SELECT
    hjtest_1.b * 5) =
  (SELECT
    hjtest_2.c * 5) AND
  (SELECT
    hjtest_1.b * 5) <
  50 AND
  (SELECT
    hjtest_2.c * 5) <
  55 AND
  hjtest_1.a <>
  hjtest_2.b;

ROLLBACK;

BEGIN;

SET LOCAL enable_hashjoin = on;

SELECT
  i8.q2,
  ss.*
FROM
  int8_tbl AS i8,
  LATERAL (SELECT
    t1.fivethous,
    i4.f1
  FROM
    tenk1 AS t1
    INNER JOIN int4_tbl AS i4
    ON t1.fivethous =
      i4.f1 + i8.q2
  ORDER BY 1,
    2) AS ss;

SELECT
  i8.q2,
  ss.*
FROM
  int8_tbl AS i8,
  LATERAL (SELECT
    t1.fivethous,
    i4.f1
  FROM
    tenk1 AS t1
    INNER JOIN int4_tbl AS i4
    ON t1.fivethous =
      i4.f1 + i8.q2
  ORDER BY 1,
    2) AS ss;

ROLLBACK;
